# neural-network

./: CMakeLists.txt  README.md
include/: activation.h  layer.h  loss.h  neural_network.h  neuron.h
include/activations/: lrelu.h  relu.h  sigmoid.h  tanh.h
include/losses/: mse.h
src/: layer.cc  main.cc  neural_network.cc  neuron.cc
tests/: layer_test.cc  neuron_test.cc
